# mandalart-app

./: .editorconfig  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.claude/agents/: migration-release-check.md
.claude/commands/: check-rules.md  ios-check-rules.md  sync-docs.md  web-check-rules.md
.github/workflows/: ci.yml  ios-ci.yml  release.yml
_old_web/: package-lock.json
_old_web/docs/: requirements.md  tasks.md
_old_web/supabase/: seed.sql
desktop/: CLAUDE.md  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
desktop/.husky/: pre-commit
desktop/docs/: animations.md  api-spec.md  cloud-sync-setup.md  data-model.md  folder-structure.md  requirements.md  security.md  tasks.md  typography.md  updater-setup.md  workflows.md
desktop/samples/: README.md  (+2 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/migrations/: 001_initial.sql  002_soft_delete.sql  003_cell_done.sql  004_unify_center.sql  005_drop_empty_cells.sql  006_parent_cell_id.sql  007_mandalart_show_checkbox.sql  008_mandalart_last_grid_id.sql  009_mandalart_sort_pin.sql  010_folders.sql  011_mandalart_locked.sql
desktop/src-tauri/src/: lib.rs
docs/: api-spec.md  data-model.md  folder-structure.md
ios/: .gitignore  CLAUDE.md  project.yml
marketing/: midjourney-storyboard-prompts.md
shared/: DIVERGENCES.md
web/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+397 files in other folders)
