[package]
name = "desktop"
version = "0.1.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# 出力バイナリ名を MandalArt にする (package name は内部識別子として desktop のまま据え置き)。
# これにより `tauri dev` 実行時の macOS Dock / プロセス名も MandalArt になる
# (build 済 .app は productName 由来で元々 MandalArt)。
[[bin]]
name = "MandalArt"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.5.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-deep-link = "2.4.8"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"

